package nl.han.dea.marijn.database.enums;

public interface KeyValueEnum {
    String getEnumValue();

    String toString();
}
