package nl.han.dea.marijn.dtos.subscription.subscription;

public class AddMySubscriptionRequest {
    private int id;
    private String aanbieder;
    private String dienst;

    public int getId() {
        return id;
    }

    public void setId(int id) {
        this.id = id;
    }

    public String getAanbieder() {
        return aanbieder;
    }

    public void setAanbieder(String aanbieder) {
        this.aanbieder = aanbieder;
    }

    public String getDienst() {
        return dienst;
    }

    public void setDienst(String dienst) {
        this.dienst = dienst;
    }

}
