package nl.han.dea.marijn.dtos.user.request;

public class ShareRequest {
    private int id;

    public Object getId() {
        return id;
    }
}
