package nl.han.dea.marijn.services;

public interface LoginService {
    boolean doLogin(String username, String password);
}
