package nl.han.dea.marijn.services.token;

public interface TokenGenerator {
    String generateToken();
}
