@startuml

title __BEROEPSPRODUCT's Class Diagram__\n

  package nl.han.dea.marijn.database.enums {
    enum Aanbieder {
    }
  }
  

  package nl.han.dea.marijn.database.models {
    class ActiveSubscription {
    }
  }
  

  package nl.han.dea.marijn.dtos.subscription {
    package nl.han.dea.marijn.dtos.subscription.subscription {
      class AddMySubscriptionRequest {
      }
    }
  }
  

  package nl.han.dea.marijn.dtos.subscription {
    package nl.han.dea.marijn.dtos.subscription.subscription {
      class GetSubscriptionResponse {
      }
    }
  }
  

  package nl.han.dea.marijn.database.config {
    class JDBC {
    }
  }
  

  package nl.han.dea.marijn.database.enums {
    interface KeyValueEnum {
    }
  }
  

  package nl.han.dea.marijn.dtos.subscription {
    package nl.han.dea.marijn.dtos.subscription.subscription {
      package nl.han.dea.marijn.dtos.subscription.subscriptionslist {
        class ListedActiveSubscriptionResponse {
        }
      }
    }
  }
  

  package nl.han.dea.marijn.controllers {
    class LoginController {
    }
  }
  

  package nl.han.dea.marijn.dtos.login {
    class LoginRequest {
    }
  }
  

  package nl.han.dea.marijn.dtos.login {
    class LoginResponse {
    }
  }
  

  package nl.han.dea.marijn.services.login {
    interface LoginService {
    }
  }
  

  package nl.han.dea.marijn.services.login {
    class LoginServiceREST {
    }
  }
  

  package nl.han.dea.marijn.dtos.user {
    package nl.han.dea.marijn.dtos.user.request {
      class ShareRequest {
      }
    }
  }
  

  package nl.han.dea.marijn.database.models {
    class SharedSubscription {
    }
  }
  

  package nl.han.dea.marijn.database.enums {
    enum Status {
    }
  }
  

  package nl.han.dea.marijn.dtos.subscription {
    class Subscription {
    }
  }
  

  package nl.han.dea.marijn.database.models {
    class Subscription {
    }
  }
  

  package nl.han.dea.marijn.controllers {
    class SubscriptionController {
    }
  }
  

  package nl.han.dea.marijn.services.subscriptions {
    interface SubscriptionService {
    }
  }
  

  package nl.han.dea.marijn.services.subscriptions {
    class SubscriptionServiceREST {
    }
  }
  

  package nl.han.dea.marijn.controllers {
    class SubscriptionsController {
    }
  }
  

  package nl.han.dea.marijn.services.token {
    interface TokenGenerator {
    }
  }
  

  package nl.han.dea.marijn.services.token {
    class UUIDGenerator {
    }
  }
  

  package nl.han.dea.marijn.dtos.user {
    class User {
    }
  }
  

  package nl.han.dea.marijn.database.models {
    class User {
    }
  }
  

  package nl.han.dea.marijn.controllers {
    class UserController {
    }
  }
  

  package nl.han.dea.marijn.services.users {
    interface UserService {
    }
  }
  

  package nl.han.dea.marijn.services.users {
    class UserServiceREST {
    }
  }
  

  package nl.han.dea.marijn.database.enums {
    enum Verdubbeling {
    }
  }
  

  Aanbieder -up-|> KeyValueEnum
  ActiveSubscription -up-|> Model
  LoginController o-- LoginService : loginService
  LoginServiceREST -up-|> LoginService
  LoginServiceREST o-- User : user
  LoginServiceREST o-- TokenGenerator : generator
  SharedSubscription -up-|> Model
  Status -up-|> KeyValueEnum
  Subscription -up-|> Model
  SubscriptionController o-- SubscriptionService : subscriptionService
  SubscriptionServiceREST -up-|> SubscriptionService
  SubscriptionServiceREST o-- User : user
  SubscriptionsController o-- SubscriptionService : subscriptionsService
  UUIDGenerator -up-|> TokenGenerator
  User -up-|> Model
  UserController o-- UserService : userService
  UserController o-- SubscriptionService : subscriptionService
  UserServiceREST -up-|> UserService
  Verdubbeling -up-|> KeyValueEnum


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
